# market-microstructure-ml

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  milestones.md  mldesign.md  prd.md  requirements.md
docs/design/: data-layer.md  observability.md
functions/expire_snapshots/: main.py  requirements.txt
scripts/: expire_snapshots.py
src/: __init__.py  run_live.py
src/dashboard/: __init__.py  app.py
src/features/: __init__.py  extractor.py  labeler.py  stability.py
src/ingest/: __init__.py  order_book.py  trade_buffer.py  websocket_client.py
src/model/: __init__.py  classifier.py
src/storage/: __init__.py  catalog.py  reader.py  schemas.py  writer.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: __init__.py  test_candle_aggregator.py  test_classifier.py  test_extractor.py  test_labeler.py  test_order_book.py  test_prediction_display.py  test_run_live.py  test_stability.py  test_trade_buffer.py  test_websocket_client.py
tests/storage/: __init__.py  test_catalog.py  test_reader.py  test_writer.py
