[project]
name = "quotewatch"
version = "0.1.0"
description = "Real-time quote-stability model powered by Coinbase WebSocket data and Plotly Dash"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "redis>=5.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "plotly>=5.18",
    "dash>=2.14",
    "gunicorn>=21.0",
    "pyiceberg[sql-postgres]>=0.7.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
